[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.2"
strum = { version = "0.25", features = ["derive"] }
fixedbitset = "0.4.2"

[patch.crates-io]
macroquad = { git = "https://github.com/FourteenBrush/macroquad.git" }
